@@ -24,6 +24,7 @@ export(.get_exprs)
 export(.ini_expressionset_cli)
 export(.ini_expressionset_yml)
 export(.show_expressionset)
+export(add_indicators)
 export(all_complete)
 export(all_unique)
 export(as.data.frame)
