@@ -4,7 +4,6 @@ NULL
 
 
 # The 'indicator' class holds indicator definitions
-# An indicator maps a data.frame to a single number.
 
 #' Define indicators for data
 #' 
@@ -35,10 +34,10 @@ indicator <- function(..., .file, .data) new('indicator',..., .file=.file, .data
 #' can be constructed with  \code{\link{indicator}}.
 #'
 #' @section Exported S4 methods for \code{validator}:
-#'   \itemize{
+#'  \itemize{
 #'  \item{Methods inherited from \code{\link{expressionset}}}
-#'  \item{\code{\link{confront}}}
-#'  \item{\code{\link{compare}}}
+#'    \item{\code{\link{confront}}}
+#'    \item{\code{\link{compare}}}
 #' }
 #' 
 #'
@@ -90,6 +89,57 @@ setMethod("+", c("indicator","indicator"), function(e1, e2){
   names(ii) <- make.names(names(ii),unique=TRUE)
   ii
 })
+
+
+#' Add indicator values as columns to a data frame
+#'
+#' Compute and add externally defined indicators to data frame.
+#' If necessary, values are recycled over records.
+#'
+#' @param dat \code{[data.frame]}
+#' @param x   \code{[indicator]} or \code{[indication]} object. See examples.
+#'
+#' @return 
+#'
+#' @examples
+#' ii <- indicator(
+#'  hihi = 2*sqrt(height)
+#'  , haha = log10(weight)
+#'  , lulz = mean(height)
+#'  , wo0t = median(weight)
+#' )
+#' 
+#' # note: mean and median are repeated
+#' add_indicators(women, ii)
+#'
+#' # compute indicators first, then add
+#' out <- confront(women, ii)
+#' add_indicators(women, out)
+#'
+#' @family indicators
+#'
+#' @export
+add_indicators <- function(dat, x){
+  if (inherits(x,"indicator")) x <- confront(dat, x)
+  vals <- values(x)
+  if (is.array(vals) && nrow(vals)==nrow(dat)){
+    cbind(dat, as.data.frame(values(x)))
+  } else { # vals is a list
+    n <- nrow(dat)
+    L <- lapply(vals, function(x){
+      if (nrow(x) == n){
+        x
+      } else {
+        y <- matrix(0, nrow=n, ncol=ncol(x))
+        y[,] <- x
+        y
+      }
+    })
+    cbind(dat, do.call("cbind", L))
+  }
+}
+
+
 
 
 
