@@ -13,3 +13,16 @@ expect_equal(length(indicator(mean(x)) + indicator(mean(x)/sd(x))),2)
 ii <- indicator(mean(x)) + indicator(mean(y))
 expect_true(!any(duplicated(names(ii))))
 
+
+# add indicators directly to data frame
+ii <- indicator(
+    hihi = 2*sqrt(height)
+  , haha = log10(weight)
+  , lulz = mean(height)
+  , wo0t = median(weight)
+)
+out <- confront(women, ii)
+expect_equal(ncol(add_indicators(women, ii)),  ncol(women) + length(ii))
+expect_equal(ncol(add_indicators(women, out)), ncol(women) + length(ii))
+
+
